syntax = "proto3";
import "users.proto";

option go_package = "github.com/YoungsoonLee/practical-go/ch08/multiple-services/service";

service Repo {
    rpc GetRepos (RepoGetRequest) returns (RepoGetReply) {}
}

message RepoGetRequest {
    string id = 2;
    string creator_id = 1;
}

message Reository {
    string id = 1;
    string name = 2;
    string url = 3;
    User owner = 4;
}

message RepoGetReply {
    repeated Reository repo = 1;
}